debut de design et mise en place de la gestion du clic

--- a/main.html
+++ b/main.html
@@ -2,12 +2,122 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" media="screen" href="design.css" />
     <title>FFDoku</title>
+    
+    <script type="text/javascript">
+      function getEvtCell(e) {
+
+      }
+    </script>
   </head>
   <body>
     <header>
-		<h1>FFDoku, the B2G Sudoku !</h1>
+      <h1>FFDoku, the B2G Sudoku !</h1>
     </header>
+    <section>
+      <table id="grid">
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+	<tr>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	  <td class="cell"></td>
+	</tr>
+      </table>
+    </section>
     <nav>
     	<ul>
     		<li>New Game</li>
@@ -15,119 +125,5 @@
     		<li>Quit</li>
     	</ul>
     </nav>
-    <section>
-    	<table id="grid">
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    		<tr>
-    			<td class="cell">1</td>
-    			<td class="cell">2</td>
-    			<td class="cell">3</td>
-    			<td class="cell">4</td>
-    			<td class="cell">5</td>
-    			<td class="cell">6</td>
-    			<td class="cell">7</td>
-    			<td class="cell">8</td>
-    			<td class="cell">9</td>
-    		</tr>
-    	</table>
-    </section>
   </body>
 </html>
