--- a/main.html
+++ b/main.html
@@ -7,13 +7,6 @@
     <script src="utils.js"></script>
     <script src="Game.class.js"></script>
     <script src="Grid.class.js"></script>
-    <script type="text/javascript">
-    	window.addEventListener('load', init, false);
-    	
-    	function init() {
-    		grid = new Grid();
-  		}
-    </script>
   </head>
   <body>
     <header>
@@ -23,11 +16,40 @@
       <table id="grid">
       </table>
     </section>
+	<section id="commands">
+		<table id="numbers">
+			<tr>
+				<td class="insert">1</td>
+				<td class="insert">2</td>
+				<td class="insert">3</td>
+			</tr>
+			<tr>
+				<td class="insert">4</td>
+				<td class="insert">5</td>
+				<td class="insert">6</td>
+			</tr>
+			<tr>
+				<td class="insert">7</td>
+				<td class="insert">8</td>
+				<td class="insert">9</td>
+			</tr>
+		</table>
+		<p><input type="button" id="erase" name="Erase" value="Erase" /></p>
+	</section>
     <nav>
     	<ul>
-    		<li id="newGame">New Game</li>
-    		<li id="reset">Reset</li>
+    		<li><input type="button" id="newGame" name="New Game" value="New Game" /></li>
+    		<li><input type="button" id="reset" name="Reset" value="Reset" /></li>
     	</ul>
     </nav>
+	<script type="text/javascript">
+    	window.addEventListener('load', init, false);
+    	
+    	function init() {
+    	  var game = new Game();
+    	  game.newGame();
+    		var grid = new Grid(game);
+  		}
+    </script>
   </body>
 </html>
