--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 		<p><input type="button" id="erase" name="Erase" value="Erase" /></p>
 	</section>
     <nav>
-    	<ul>
+    	<ul id="menu">
     		<li><input type="button" id="newGame" name="New Game" value="New Game" /></li>
     		<li><input type="button" id="reset" name="Reset" value="Reset" /></li>
     	</ul>
