Modification de mon adresse e-mail

--- a/main.html
+++ b/main.html
@@ -1,6 +1,6 @@
 <!--
     FFDoku is a Sudoku game primarily designed for the Firefox OS
-    Copyright (C) 2012 Erwan GUYADER <erwanguyader@mailoo.org>, Antoine DUPARAY <antoineduparay@gmail.com>
+    Copyright (C) 2012 Erwan GUYADER <erwanguyader@mailoo.org>, Antoine DUPARAY <flaburgan@geexxx.fr>
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as
