--- a/index.html
+++ b/index.html
@@ -33,55 +33,62 @@
 			<h1>FFDoku</h1>
 			<h2>A Sudoku game for Firefox OS</h2>
 		</header>
-		<section>
-			<table id="grid">
-			</table>
-		</section>
-		<section id="commands">
-			<table id="numbers">
-				<tr>
-					<td class="insert">1</td>
-					<td class="insert">2</td>
-					<td class="insert">3</td>
-				</tr>
-				<tr>
-					<td class="insert">4</td>
-					<td class="insert">5</td>
-					<td class="insert">6</td>
-				</tr>
-				<tr>
-					<td class="insert">7</td>
-					<td class="insert">8</td>
-					<td class="insert">9</td>
-				</tr>
-			</table>
-			<p><input type="button" id="erase" name="Erase" value="Erase" /></p>
-		</section>
-		<section id="gameInfos">
-			<p>
-				<label for="level">Level</label>
-				<select id="level">
-					<option value="easy">Easy</option>
-					<option value="medium">Medium</option>
-					<option value="hard">Hard</option>
-				</select>
-			</p>
-			<p>
-				<input type="button" id="startGame" name="Start Game" value="Start Game" />
-				<input type="button" id="cancel" name="Cancel" value="Cancel" />
-			</p>
-		</section>
+		<div id="content">
+		    <section>
+			    <table id="grid">
+			    </table>
+		    </section>
+		    <section id="commands">
+			    <table id="numbers">
+				    <tr>
+					    <td class="insert">1</td>
+					    <td class="insert">2</td>
+					    <td class="insert">3</td>
+				    </tr>
+				    <tr>
+					    <td class="insert">4</td>
+					    <td class="insert">5</td>
+					    <td class="insert">6</td>
+				    </tr>
+				    <tr>
+					    <td class="insert">7</td>
+					    <td class="insert">8</td>
+					    <td class="insert">9</td>
+				    </tr>
+			    </table>
+			    <p><input type="button" id="erase" name="Erase" value="Erase" /></p>
+		    </section>
+		    <section id="gameInfos">
+			    <p>
+				    <label for="level">Level</label>
+				    <select id="level">
+					    <option value="easy">Easy</option>
+					    <option value="medium">Medium</option>
+					    <option value="hard">Hard</option>
+				    </select>
+			    </p>
+			    <p>
+				    <input type="button" id="startGame" name="Start Game" value="Start Game" />
+				    <input type="button" id="cancel" name="Cancel" value="Cancel" />
+			    </p>
+		    </section>
+		    <section id="about">
+		        <p>
+				    Copyright (C) 2012 Erwan Guyader, Antoine Duparay<br />
+				    Licence AGPL v3 | <a href="https://github.com/taratatach/FFDoku" id="source">Source</a>
+				    <input type="button" id="cancelAbout" name="Cancel" value="Cancel" />
+			    </p>
+		    </section>
+		</div>
 		<footer>
 			<nav>
 				<ul id="menu">
 					<li><input type="button" id="newGame" name="New Game" value="New Game" /></li>
 					<li><input type="button" id="reset" name="Reset" value="Reset" /></li>
+					<li><input type="button" id="dispAbout" name="About" value="About" /></li>
 				</ul>
 			</nav>
-			<p>
-				Copyright (C) 2012 Erwan Guyader, Antoine Duparay<br />
-				Licence AGPL v3 | <a href="https://github.com/taratatach/FFDoku" id="source">Source</a>
-			</p>
+			
 		</footer>
 		<script type="text/javascript">
 			window.addEventListener('load', init, false);
