modification de l'affichage des popups

--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
 				    <input type="button" id="cancelAbout" name="Cancel" value="Cancel" />
 			    </p>
 		    </section>
+		    <div id="floater"></div>
+		    <footer>
+			    <nav>
+				    <ul id="menu">
+					    <li><input type="button" id="newGame" name="New Game" value="New Game" /></li>
+					    <li><input type="button" id="reset" name="Reset" value="Reset" /></li>
+					    <li><input type="button" id="dispAbout" name="About" value="About" /></li>
+				    </ul>
+			    </nav>
+		    </footer>
 		</div>
-		<footer>
-			<nav>
-				<ul id="menu">
-					<li><input type="button" id="newGame" name="New Game" value="New Game" /></li>
-					<li><input type="button" id="reset" name="Reset" value="Reset" /></li>
-					<li><input type="button" id="dispAbout" name="About" value="About" /></li>
-				</ul>
-			</nav>
-			
-		</footer>
 		<script type="text/javascript">
 			window.addEventListener('load', init, false);
 			
