suppression de la mention 'for Firefox OS'

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<body>
 		<header>
 			<h1>FFDoku</h1>
-			<h2>A Sudoku game for Firefox OS</h2>
+			<h2>a Sudoku game</h2>
 		</header>
 		<footer>
 		    <nav>
