bouton de about affiche maintenant OK

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		        <p>
 				    Copyright (C) 2012 Erwan Guyader, Antoine Duparay<br />
 				    Licence AGPL v3 | <a href="https://github.com/taratatach/FFDoku" id="source">Source</a>
-				    <input type="button" id="cancelAbout" name="Cancel" value="Cancel" />
+				    <input type="button" id="ok" name="OK" value="OK" />
 			    </p>
 		    </section>
 		</div>
