--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <!DOCTYPE html>
-<html> <!-- manifest="manifest.appcache"> -->
+<html manifest="manifest.appcache">
 <head>
 <title>FFDoku</title>
 <meta charset="utf-8" />
