--- a/index.html
+++ b/index.html
@@ -1,133 +1,103 @@
 <!--
-    FFDoku is a Sudoku game primarily designed for the Firefox OS
-    Copyright (C) 2012 Erwan GUYADER <erwanguyader@mailoo.org>, Antoine DUPARAY <flaburgan@geexxx.fr>
+  FFDoku is a Sudoku game primarily designed for the Firefox OS
+  Copyright (C) 2012-2013 Erwan GUYADER <taratatach@mozfr.org>, Antoine DUPARAY <antoine.duparay@mozfr.org>
 
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU Affero General Public License as
-published by the Free Software Foundation, either version 3 of the
-License, or (at your option) any later version.
+  This program is free software: you can redistribute it and/or modify
+  it under the terms of the GNU Affero General Public License as
+  published by the Free Software Foundation, either version 3 of the
+  License, or (at your option) any later version.
 
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details.
+  This program is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU Affero General Public License for more details.
 
-You should have received a copy of the GNU Affero General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses/>.
-
-
+  You should have received a copy of the GNU Affero General Public License
+  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <!DOCTYPE html>
-<html manifest="manifest.appcache">
-<head>
-  <title>FFDoku</title>
-  <meta charset="utf-8" />
-  <link rel="stylesheet" href="design.css" />
-  <link rel="stylesheet" href="shared/style/headers.css" />
-  <link rel="stylesheet" href="shared/style/buttons.css" />
-  <link rel="stylesheet" href="shared/style/action_menu.css" />
-  <link rel="stylesheet" href="shared/style_unstable/drawer.css" />
-  <link rel="stylesheet" href="shared/style_unstable/toolbars.css">
-</head>
-<body>
-  <section data-type="sidebar">
-    <header>
-      <h1>Settings</h1>
-    </header>
-    <nav>
-      <ul>
-       <li><a href="#">label</a></li>
-     </ul>
-     <h2>Subtitle</h2>
-     <ul>
-       <li><a href="#">label larger label than the </a></li>
-     </ul>
-   </nav>
- </section>
- 
- <section id="drawer" role="region">
-  <header>
-    <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
-    <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
-    <h1>FFDoku</h1>
-  </header>
-  <div id="content">
-    <section>
-     <table id="grid"></table>
-   </section>
-   <section id="commands">
-     <table id="numbers">
-       <tr>
-         <td class="insert">1</td>
-         <td class="insert">2</td>
-         <td class="insert">3</td>
-       </tr>
-       <tr>
-         <td class="insert">4</td>
-         <td class="insert">5</td>
-         <td class="insert">6</td>
-       </tr>
-       <tr>
-         <td class="insert">7</td>
-         <td class="insert">8</td>
-         <td class="insert">9</td>
-       </tr>
-     </table>
-     <p><button id="erase" class="danger">Erase</button></p>
-   </section>
-   <section id="gameInfos">
-     <form role="dialog" data-type="action" onsubmit="return false;">
-       <header>New Game</header> <!-- this header is optional -->
-       <menu>
-         <button role="level" value="easy"> Easy </button>
-         <button role="level" value="medium"> Medium </button>
-         <button role="level" value="hard"> Hard </button>
-         <button role="cancel"> Cancel </button>
-       </menu>
-     </form>
-   </section>
+<html>
+  <head>
+    <title>FFDoku</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style/design.css" />
+    <link rel="stylesheet" href="shared/style/headers.css" />
+    <link rel="stylesheet" href="shared/style/buttons.css" />
+    <link rel="stylesheet" href="shared/style/action_menu.css" />
+    <link rel="stylesheet" href="shared/style_unstable/toolbars.css">
+  </head>
 
-      <!--
-      <section id="gameInfos">
-	<p>
-	  <label for="level">Level</label>
-	  <select id="level">
-	    <option value="easy">Easy</option>
-	    <option value="medium">Medium</option>
-	    <option value="hard">Hard</option>
-	  </select>
-	</p>
-	<p>
-	  <input type="button" id="startGame" name="Start Game" value="Start Game" />
-	  <input type="button" id="cancel" name="Cancel" value="Cancel" />
-	</p>
-      </section>
-    -->
-    
-    <section id="about">
-     <p>
-       Copyright &copy; 2012<br />
-       Erwan Guyader &amp; Antoine Duparay<br />
-       Licence AGPL v3 - <a href="https://github.com/taratatach/FFDoku">Source</a>
-     </p>
-     <p><button id="ok">OK</button></p>
-   </section>
- </div>
- <footer>
-  <div role="toolbar">
-   <ul>
-     <li><button id="newGame" class="icon-new">New Game</button></li>
-     <li><button id="reset" class="icon icon-reset">Reset</button></li>
-     <li><button id="dispAbout" class="icon icon-about">About</button></li>
-   </ul>
- </div>
-</footer>
-</section>
+  <body>
+    <section id="game-view" role="region">
+      <header>
+        <h1>FFDoku</h1>
+      </header>
 
-<script src="utils.js"></script>
-<script src="Game.class.js"></script>
-<script src="Grid.class.js"></script>
-<script src="load.js"></script>
-</body>
+      <div id="content">
+        <section>
+          <table id="grid"></table>
+        </section>
+
+        <section id="commands">
+          <table id="numbers">
+            <tr>
+              <td class="insert">1</td>
+              <td class="insert">2</td>
+              <td class="insert">3</td>
+            </tr>
+            <tr>
+              <td class="insert">4</td>
+              <td class="insert">5</td>
+              <td class="insert">6</td>
+            </tr>
+            <tr>
+              <td class="insert">7</td>
+              <td class="insert">8</td>
+              <td class="insert">9</td>
+            </tr>
+          </table>
+          <p><button id="erase" class="danger">Erase</button></p>
+        </section>
+
+        <section id="gameInfos">
+          <form role="dialog" data-type="action" onsubmit="return false;">
+            <header>New Game</header> <!-- this header is optional -->
+            <menu>
+              <button role="level" value="easy"> Easy </button>
+              <button role="level" value="medium"> Medium </button>
+              <button role="level" value="hard"> Hard </button>
+              <button role="cancel"> Cancel </button>
+            </menu>
+          </form>
+        </section>
+
+        <section id="about">
+          <p>
+            Copyright &copy; 2012-2013<br />
+            Erwan Guyader<br />
+            &amp;<br />
+            Antoine Duparay<br />
+            Licence AGPL v3 - <a href="https://github.com/taratatach/FFDoku" target="_blank">Source</a>
+          </p>
+          <p><button id="ok">OK</button></p>
+        </section>
+      </div>
+
+      <footer>
+        <div id="action-menu" role="toolbar">
+          <ul>
+            <li><button id="newGame" class="icon-new">New Game</button></li>
+            <li><button id="reset" class="icon-reset">Reset</button></li>
+            <li><button id="dispAbout" class="icon-about">About</button></li>
+          </ul>
+        </div>
+      </footer>
+    </section>
+
+    <script src="script/utils.js"></script>
+    <script src="script/Game.class.js"></script>
+    <script src="script/Grid.class.js"></script>
+    <script src="script/load.js"></script>
+  </body>
 </html>
