--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 -->
 
 <!DOCTYPE html>
-<html>
+<html manifest="manifest.appcache">
   <head>
     <title>FFDoku</title>
     <meta charset="utf-8" />
