--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <head>
     <title>FFDoku</title>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <link rel="stylesheet" href="style/design.css" />
     <link rel="stylesheet" href="shared/style/headers.css" />
     <link rel="stylesheet" href="shared/style/buttons.css" />
